refactoring in Plot utils code for the steps summary code and making the ECG dialog full screen